--- a/css/menu.css
+++ b/css/menu.css
@@ -37,9 +37,31 @@
 }
 
 .main-menu .top_level > li:hover > .dropdown-menu{
-    opacity: 1;
-    top: 70px;
-    z-index: 5;
+    animation-duration: 0.7s;
+    animation-name: dropdown-menu__open;
+    animation-fill-mode: forwards;
+}
+
+@keyframes dropdown-menu__open{
+    from {
+        top: 90px;
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+        top: 70px;
+        display: flex;
+    }
+}
+
+.main-menu .top_level > li > .dropdown-menu:before{
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: -20px;
+    width: 100%;
+    height: 50px;
 }
 
 
@@ -52,7 +74,7 @@
     display: flex;
     opacity: 0;
     left: -10px;
-    top: 91px;
+    top: -500px;
     cursor: auto;
     transition: all 0.7s;
 }
